chore: Add unit test for `getAuthToken()`

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -5,6 +5,9 @@ name: PR
 
 on: [pull_request]
 
+env:
+  GOOGLE_CLOUD_CREDENTIALS: ${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
