--- a/package.json
+++ b/package.json
@@ -79,9 +79,13 @@
     "@types/jest": "^28.1.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "babel-jest": "^28.1.0",
     "babel-plugin-replace-import-extension": "^1.1.3",
+    "dotenv": "^16.0.1",
+    "envalid": "^7.3.1",
     "eslint": "^8.16.0",
     "jest": "^28.1.0",
+    "jest-environment-miniflare": "^2.5.0",
     "prettier": "^2.6.2",
     "typescript": "^4.7.2"
   },
