chore: Upgrade dependencies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,11 @@
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "jest.jestCommandLine": "yarn node --experimental-vm-modules $(yarn bin jest)",
   "jestrunner.jestCommand": "yarn node --experimental-vm-modules $(yarn bin jest)",
+  "jestrunner.debugOptions": {
+    "env": {
+      "NODE_OPTIONS": "--experimental-vm-modules"
+    }
+  },
   "files.exclude": {
     "**/.cache": true,
     "**/.DS_Store": true,
