--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
     "**/.gitattributes": true,
     "**/.pnp.cjs": true,
     "**/.pnp.loader.mjs": true,
-    "**/.prettierignore": true
+    "**/.prettierignore": true,
+    "**/node_modules": true
   },
   "search.exclude": {
     "**/dist/": true,
