--- a/package.json
+++ b/package.json
@@ -76,15 +76,15 @@
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
-    "@cloudflare/workers-types": "^3.13.0",
+    "@cloudflare/workers-types": "^4.20230221.0",
     "@types/jest": "^28.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "babel-jest": "^28.1.1",
     "babel-plugin-replace-import-extension": "^1.1.3",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
-    "eslint": "^8.18.0",
+    "eslint": "^8.35.0",
     "jest": "^28.1.1",
     "jest-environment-miniflare": "^2.5.1",
     "prettier": "^2.7.1",
