--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -5,22 +5,15 @@ name: PR
 
 on: [pull_request]
 
-env:
-  GOOGLE_CLOUD_CREDENTIALS: ${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/cache@v3
+      - uses: actions/setup-node@v3
         with:
-          path: |
-            ${{ github.workspace }}/.yarn/cache
-            ${{ github.workspace }}/.yarn/unplugged
-            ${{ github.workspace }}/.yarn/install-state.gz
-          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
-          restore-keys: ${{ runner.os }}-yarn-
+          node-version: 19
+          cache: "yarn"
 
       # Install dependencies
       - run: yarn config set enableGlobalCache false
@@ -33,3 +26,5 @@ jobs:
 
       # Test
       - run: yarn test
+        env:
+          GOOGLE_CLOUD_CREDENTIALS: ${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}
