--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-auth-library",
-  "version": "0.4.1",
-  "packageManager": "yarn@4.0.0-rc.10",
+  "version": "0.4.2",
+  "packageManager": "yarn@4.0.0-rc.39",
   "description": "Authentication library for the browser environment using Web Crypto API",
   "license": "MIT",
   "author": {
@@ -72,23 +72,23 @@
     "rfc4648": "^1.5.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.6",
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@cloudflare/workers-types": "^3.13.0",
-    "@types/jest": "^28.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "babel-jest": "^28.1.1",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "@cloudflare/workers-types": "^4.20230221.0",
+    "@types/jest": "^29.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "babel-jest": "^29.4.3",
     "babel-plugin-replace-import-extension": "^1.1.3",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
-    "eslint": "^8.18.0",
-    "jest": "^28.1.1",
-    "jest-environment-miniflare": "^2.5.1",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "eslint": "^8.35.0",
+    "jest": "^29.4.3",
+    "jest-environment-miniflare": "^2.12.1",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
   },
   "babel": {
     "presets": [
