--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 
-# Compiled output
+# Cache and compiled output
+/.cache/
 /dist/
 
 # Yarn package manager
