--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-auth-library",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "packageManager": "yarn@4.0.0-rc.39",
   "description": "Authentication library for the browser environment using Web Crypto API",
   "license": "MIT",
@@ -26,7 +26,7 @@
       "url": "https://www.patreon.com/koistya"
     }
   ],
-  "repository": "kriasoft/web-auth-library",
+  "repository": "github:kriasoft/web-auth-library",
   "keywords": [
     "auth",
     "authentication",
