--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 19
-          cache: "yarn"
+          cache: 'yarn'
 
       # Install dependencies
       - run: yarn config set enableGlobalCache false
