--- a/.github/workflows/pull_request_lint.yml
+++ b/.github/workflows/pull_request_lint.yml
@@ -1,7 +1,7 @@
 # GitHub Actions workflow
 # https://help.github.com/actions
 
-name: "conventionalcommits.org"
+name: 'conventionalcommits.org'
 
 on:
   pull_request:
