--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-auth-library",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "packageManager": "yarn@4.0.0-rc.39",
   "description": "Authentication library for the browser environment using Web Crypto API",
   "license": "MIT",
@@ -58,20 +58,30 @@
     "dist"
   ],
   "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js",
-    "./jwt": "./dist/core/jwt.js",
     "./google": {
       "types": "./dist/google/index.d.ts",
       "import": "./dist/google/index.js",
       "default": "./dist/google/index.js"
-    },
-    "./package.json": "./package.json"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "google": [
+        "dist/google/index.d.ts"
+      ]
+    }
   },
   "scripts": {
+    "dev": "tsup --watch",
     "lint": "eslint --report-unused-disable-directives .",
+    "fix": "eslint --report-unused-disable-directives --fix . && prettier --write .",
     "test": "node --experimental-vm-modules $(yarn bin jest)",
-    "build": "rm -rf ./dist && yarn tsc"
+    "build": "tsup"
   },
   "dependencies": {
     "jose": ">= 4.12.0 < 5.0.0",
@@ -94,6 +104,7 @@
     "jest": "^29.4.3",
     "jest-environment-miniflare": "^2.12.1",
     "prettier": "^2.8.4",
+    "tsup": "^7.2.0",
     "typescript": "^4.9.5"
   },
   "babel": {
